--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733249.md#1">克鲁兹：弹劾案已崩溃 民主党阵脚大乱</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731171.md#1">五毛花千芳曝中共经济衰败 母亲养老证遭收缴</a><br>
 <br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739591.md#1">东方觉：脸上“贴金”与腰包“捞银”</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739388.md#1">川人：中共的邪恶远超乎常人想像</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739240.md#1">张林：在茶园呆了3年，25年不敢喝中国茶</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739176.md#1">李靖宇：台大选政见发表会 国民党出了大问题</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737618.md#1">周晓辉：川习再通话 贸易协议签署仍存变数</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737513.md#1">颜丹：清华北大的丑闻与复旦的新章程</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706339.md#1">李旭彤：挖掘五千年文明惊世宝藏（10）</a><br>
-<a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736666.md#1">任世豪：岁末看反迫害前景</a><br>
 <br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
@@ -42,6 +42,7 @@
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738880.md#1">中国高校号召带留学生一对一回家过年 惹议</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/1/n11693550.md#1">为中共效力的红色特工 后来怎么样了（1）</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738946.md#1">王赫：台湾出路何在？</a><br>
+<a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739498.md#1">云南恶霸孙小果案重审 再判死刑</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739250.md#1">大陆现新三角债 中共地方当局欠民企巨资</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739399.md#1">天津发生3.3级地震 北京唐山有震感</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733119.md#1">新闻传媒界法轮功学员遭中共迫害综述（下）</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737305.md#1">马云卸任后 在湖北获“新职”</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737201.md#1">黄琦87岁母亲险遭黑手 呼吁外界关注</a><br>
 <a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737361.md#1">安全担忧 美海军限制使用抖音海外版</a><br>
-<a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737276.md#1">天然气太贵民众偷烧煤 中共官员强行封灶台</a><br>
-<br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演">神韵古典舞表演</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党">九评共产党</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的">共产主义终极目的</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局"">中共的伪火骗局"</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例">剖析1400例</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程">通往天安门的旅程</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话">未来人的神话故事</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石">古今奇观-藏字石</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘">中共罪恶的活摘</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山">铁证如山</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政">一家四口死于暴政</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害">弟妹相继死于迫害</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死">她们被中共迫害死</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪">双城血泪</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护">无罪辩护震撼人心</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720">从610到720</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择">中共官员的选择</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相">万人上访真相</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子">被迫害的清华学子</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513">见证513</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道">功夫 寻道</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹">歌唱家的人生奇迹</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择">名校精英的选择</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事">音乐之家的故事</a><br><a href="https://d2xp2l4ecgomil.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡">平凡中的不平凡</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢">善良女士被投男牢</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘">警卫目击中共活摘</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路">马克思的成魔之路</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报">303万人的举报</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差">海峡两岸强烈反差</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方">印度媒体报道东方</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园">不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737133.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/04/Distribution_Presentation_March2018_1.5_Allpapers_slide-150x120.jpeg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737133.md#1">大纪元声明：吁脸书更正对大纪元不实言论</a><br>Facebook声称已删除与大纪元媒体集团 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736771.md#1">四川轻化工大学副教授因言受罚</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736511.md#1">【拍案惊奇】香港监狱外抗争 澳门监狱里庆祝</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736211.md#1">仿效香港抗争 网民发起非暴力罢用微信行动</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731126.md#1">【名家专栏】中共一胎化警示集体主义之邪恶</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737119.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/sss-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737119.md#1">大陆为何出现江湖“底朝天” 专家揭秘（上）</a><br>中国大陆枯水期来临之际，长江中下游 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736943.md#1">标致雪铁龙从大陆撤资 传宝能接手</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736689.md#1">又是“无一验收通过” 甘肃关闭全部P2P</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736359.md#1">再现负增长 大陆11月地方预算收入减少1.1%</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736341.md#1">中国烂尾楼遍布各地 住宅楼业主苦等无门</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735798.md#1">大陆又一长租公寓爆雷 老板被拘 总部搬空</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737218.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N641W-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737218.md#1">美防长：美在中东的行动不影响聚焦中俄</a><br>美国国防部长马克·埃斯珀(Mark Espe ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736394.md#1">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737039.md#1">郴州电视台台长与政法委书记联手敛财</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736935.md#1">三商人实名举报：江西前副省长索贿上亿元</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736961.md#1">蓬佩奥：中国人民正在抵制共产党</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736741.md#1">题材敏感？《一级指控》疑遭中方施压禁上映</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736584.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9603-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736584.md#1">安徽青年离奇溺毙 警方不立案 家属讨真相</a><br>安徽怀化市青年任政权在江苏苏州打工 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736993.md#1">吉林载37人巴士侧滑坠江 6人死亡</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11734233.md#1">四川内江再发生3.3级地震</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733651.md#1">山西设禁煤区推煤改气 抢煤封炉 民怨沸腾</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731701.md#1">四川再发地震 今年至少14次地震</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11729434.md#1">四川内江5.2级地震 18人受伤8千户停电</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737087.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/money-notes-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737087.md#1">【货币市场】 美股创历史最高 美元强势</a><br>在货币市场周五（美东时间12月20日） ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737991.md#1">每日三退声明精选（2019/12/21）</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736392.md#1">“自干五”花千芳替母养老维权 遭网民嘲讽</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736910.md#1">工作人员在陕西兵马俑坑内洒水引网友热议</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736172.md#1">高校频爆丑闻 清华被曝出骗子北大出流氓</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735699.md#1">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735028.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/FakeFossil_news1_BL-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735028.md#1">中国学者以假蜘蛛化石发表论文 遭专家拆穿</a><br>中国科学家取得远古巨大“蜘蛛”的化 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736026.md#1">大连Logo头奖疑抄迪士尼 网民：胆子真大</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735508.md#1">河南一中学生遭霸凌致死 官方说法被斥卸责</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733222.md#1">首轮入围名单公布 陆片《哪吒》无缘奥斯卡</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11721813.md#1">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11721510.md#1">中共基因编辑打造“超级猪” 学界痛批</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728358.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br>香港民主运动持续进行。圣诞节将近， ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/4/n11701016.md#1">美为何点名要制裁《大公报》《文汇报》</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11716284.md#1">新闻自由恶化 中共今年监禁记者数全球第一</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/7/n11707663.md#1">美图片商配合中共建黑名单 员工请愿喊停</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731023.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9586-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br>继11月底广东茂名化州市文楼镇上万村 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11714651.md#1">国际人权日 多位大陆维权人士被控制不能外出</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713727.md#1">参加人权日活动 美驻华大使馆前数十人被抓</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713745.md#1">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演">神韵古典舞表演</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党">九评共产党</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的">共产主义终极目的</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局"">中共的伪火骗局"</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例">剖析1400例</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程">通往天安门的旅程</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话">未来人的神话故事</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石">古今奇观-藏字石</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘">中共罪恶的活摘</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山">铁证如山</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政">一家四口死于暴政</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害">弟妹相继死于迫害</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死">她们被中共迫害死</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪">双城血泪</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护">无罪辩护震撼人心</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720">从610到720</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择">中共官员的选择</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相">万人上访真相</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子">被迫害的清华学子</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513">见证513</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道">功夫 寻道</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹">歌唱家的人生奇迹</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择">名校精英的选择</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事">音乐之家的故事</a><br><a href="https://daoh37p0x6gk6.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡">平凡中的不平凡</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢">善良女士被投男牢</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘">警卫目击中共活摘</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路">马克思的成魔之路</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报">303万人的举报</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差">海峡两岸强烈反差</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方">印度媒体报道东方</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/synhl2788/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园">不一样的海外校园</a><br>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737133.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/04/Distribution_Presentation_March2018_1.5_Allpapers_slide-150x120.jpeg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737133.md#1">大纪元声明：吁脸书更正对大纪元不实言论</a><br>Facebook声称已删除与大纪元媒体集团 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736771.md#1">四川轻化工大学副教授因言受罚</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736511.md#1">【拍案惊奇】香港监狱外抗争 澳门监狱里庆祝</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736211.md#1">仿效香港抗争 网民发起非暴力罢用微信行动</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731126.md#1">【名家专栏】中共一胎化警示集体主义之邪恶</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737119.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/sss-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737119.md#1">大陆为何出现江湖“底朝天” 专家揭秘（上）</a><br>中国大陆枯水期来临之际，长江中下游 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736943.md#1">标致雪铁龙从大陆撤资 传宝能接手</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736689.md#1">又是“无一验收通过” 甘肃关闭全部P2P</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736359.md#1">再现负增长 大陆11月地方预算收入减少1.1%</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736341.md#1">中国烂尾楼遍布各地 住宅楼业主苦等无门</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735798.md#1">大陆又一长租公寓爆雷 老板被拘 总部搬空</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737218.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N641W-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737218.md#1">美防长：美在中东的行动不影响聚焦中俄</a><br>美国国防部长马克·埃斯珀(Mark Espe ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736394.md#1">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737039.md#1">郴州电视台台长与政法委书记联手敛财</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736935.md#1">三商人实名举报：江西前副省长索贿上亿元</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736961.md#1">蓬佩奥：中国人民正在抵制共产党</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736741.md#1">题材敏感？《一级指控》疑遭中方施压禁上映</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736584.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9603-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736584.md#1">安徽青年离奇溺毙 警方不立案 家属讨真相</a><br>安徽怀化市青年任政权在江苏苏州打工 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736993.md#1">吉林载37人巴士侧滑坠江 6人死亡</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11734233.md#1">四川内江再发生3.3级地震</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733651.md#1">山西设禁煤区推煤改气 抢煤封炉 民怨沸腾</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731701.md#1">四川再发地震 今年至少14次地震</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11729434.md#1">四川内江5.2级地震 18人受伤8千户停电</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737276.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/7d45b3c9a3db24ea4013d87bd3eac9a9-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737276.md#1">天然气太贵民众偷烧煤 中共官员强行封灶台</a><br>为减少空污，中国华北地区近年强推煤 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737991.md#1">每日三退声明精选（2019/12/21）</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737087.md#1">【货币市场】 美股创历史最高 美元强势</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736392.md#1">“自干五”花千芳替母养老维权 遭网民嘲讽</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736910.md#1">工作人员在陕西兵马俑坑内洒水引网友热议</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736172.md#1">高校频爆丑闻 清华被曝出骗子北大出流氓</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735028.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/FakeFossil_news1_BL-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735028.md#1">中国学者以假蜘蛛化石发表论文 遭专家拆穿</a><br>中国科学家取得远古巨大“蜘蛛”的化 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736026.md#1">大连Logo头奖疑抄迪士尼 网民：胆子真大</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735508.md#1">河南一中学生遭霸凌致死 官方说法被斥卸责</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733222.md#1">首轮入围名单公布 陆片《哪吒》无缘奥斯卡</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11721813.md#1">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11721510.md#1">中共基因编辑打造“超级猪” 学界痛批</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728358.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br>香港民主运动持续进行。圣诞节将近， ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/4/n11701016.md#1">美为何点名要制裁《大公报》《文汇报》</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11716284.md#1">新闻自由恶化 中共今年监禁记者数全球第一</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/7/n11707663.md#1">美图片商配合中共建黑名单 员工请愿喊停</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731023.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9586-150x120.jpg"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br>继11月底广东茂名化州市文楼镇上万村 ...<br><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11714651.md#1">国际人权日 多位大陆维权人士被控制不能外出</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713727.md#1">参加人权日活动 美驻华大使馆前数十人被抓</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713745.md#1">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br><br><p><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/synhl2788/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
